# NLW_Jorney_IA

./: Makefile  README.md  pyproject.toml
nlw15_ia/: requirements.txt  travelAgent.py  try.curl
